src/objects/ADvendio__ExcludedPlacement__c.object
<CustomObject>
    <description>The combination of Account and Site/Placement contained in an ExcludedPlacement object is forbidden and will not be shown in the product search.</description>
    <fields>
        <fullName>ADvendio__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccSiteBlacklistItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement</label>
        <referenceTo>ADvendio__Placement__c</referenceTo>
        <relationshipName>BlacklistItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipName>AccSiteBlacklistItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ExcludedPlacement</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EP-{0}</displayFormat>
        <label>ExcludedPlacement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExcludedPlacements</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__Placement</fullName>
        <active>true</active>
        <label>Placement</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__Site</fullName>
        <active>true</active>
        <label>Site</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>